--- a/src.gameapp1508580537188.html
+++ b/src.gameapp1508580537188.html
@@ -1,7 +1,7 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <body>
-<applet code=src.gameapp.class width="825" height="825" >
+<applet code=realspace.GameApp.class width="825" height="825" >
 <param name="SIZE_SCALE" value="1.5">
 </applet>
 </body>
